data/derived/comb/progs/unify/prog4314.ml.out
Characters 99-100:
  in helper (f, b);;
             ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
